--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,18 +19,15 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     //ui
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-
     //support
     implementation "com.android.support:appcompat-v7:${supportLibrary}"
-
+    implementation "com.android.support:cardview-v7:${supportLibrary}"
     //network
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
-
     //tests
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
