--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     //support
     implementation "com.android.support:appcompat-v7:${supportLibrary}"
     implementation "com.android.support:cardview-v7:${supportLibrary}"
+    implementation "com.android.support:recyclerview-v7:${supportLibrary}"
     //network
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
